@@ -3,6 +3,7 @@ package addsynth.energy.gameplay.compressor;
 import addsynth.core.container.BaseContainer;
 import addsynth.core.container.slots.InputSlot;
 import addsynth.core.container.slots.OutputSlot;
+import addsynth.energy.gameplay.compressor.recipe.CompressorRecipes;
 import addsynth.energy.registers.Containers;
 import net.minecraft.entity.player.PlayerInventory;
 import net.minecraft.network.PacketBuffer;
@@ -21,7 +22,7 @@ public final class ContainerCompressor extends BaseContainer<TileCompressor> {
 
   private final void common_setup(final PlayerInventory player_inventory){
     make_player_inventory(player_inventory,8,100);
-    addSlot(new InputSlot( tile, 0,  32, 42));
+    addSlot(new InputSlot( tile, 0, CompressorRecipes.filter, 32, 42));
     addSlot(new OutputSlot(tile, 0, 128, 42));
   }
 
